Changed font withing photographer card

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bitter|Economica|Gentium+Basic|Nanum+Myeongjo|Unna&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cardo&display=swap" rel="stylesheet">
   <title>Meetographers</title>
 </head>
 
